# Gestor_Tareas_backend

./: README.md  gestor_empleos.db  pyproject.toml
src/gestor_tareas/: database.py  logger.py  main.py  models.py  schemas.py
src/gestor_tareas/services/: mejora scraper.py  mejora_scraper.py  scraper.py
