[project]
name = "gestor-tareas-backend"
version = "0.1.0"
description = "Backend API para automatizacion de busqueda de empleo con fastapi"
authors = [
    {name = "Edward Anyhelo Barrios Flores"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
