[tool.poetry]
name = "gestor-tareas-backend"
version = "0.1.0"
description = "Backend API para automatizacion de busqueda"
authors = ["Edward Anyhelo Barrios Flores"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
sqlalchemy = "^2.0.45"
selenium = "^4.40.0"
webdriver-manager = "^4.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"